# oncall_app

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/pages/: AdminPage.jsx  AdminResultsPage.jsx  CalendarPage.jsx  IndexPage.jsx  SchedulePage.jsx  SurveyPage.jsx
oncall_app/: __init__.py  db.py  holiday_utils.py  oncall_app.py  routes.py  scheduler.py  templates.py
oncall_app/static/: index.html
oncall_app/static/assets/: index-ByP6E_Dy.css  index-C8i872a1.js  index-CTFBBJ2C.js  index-GjABPd0e.js  index-UmNuviOX.js  index-c-FsWJRg.css
tests/: test_api.py  test_scheduler.py
